[package]
name = "my-fluent-rs-helper"
version = "0.1.0"
edition = "2024"
description = "A library designed to simplify the usage of fluent-rs."
license = "MIT"
license-file = "LISCENSE"
keywords = ["international", "i18n", "localize", "localization"]
categories = ["internationalization"]

[dependencies]
fluent = "0.16.1"
intl-memoizer = "0.5.2"
sys-locale = "0.3.2"
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }
